--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,9 @@
   --prinary-black-color: #000000;
   --second-background-color: #2f303a;
   --third-background-color: #f5f4fa;
+  --btn-active-color: #188ce8;
+  --border-color: #ececec;
+  --border-portf-color: #eee;
 }
 
 p,
@@ -53,8 +56,7 @@ body {
 
 /* HEADER */
 .header {
-  padding-top: 24px;
-  padding-bottom: 24px;
+  border: 1px solid var(--border-color);
 }
 
 .header-container {
@@ -114,6 +116,10 @@ body {
   padding-bottom: 32px;
 }
 
+.active {
+  color: var(--accent-text-color);
+}
+
 .header-item:not(:last-child) {
   margin-right: 50px;
 }
@@ -167,13 +173,15 @@ body {
   color: var(--prinary-white-color);
   background-color: var(--accent-text-color);
   border-radius: 4px;
+  border: none;
   display: block;
   margin: 0 auto;
 }
 
 .hero-btn :hover,
 .hero-btn :focus {
-  color: var(--accent-text-color);
+  color: var(--prinary-white-color);
+  background-color: var(--btn-active-color);
 }
 
 /* FEATURES-SECTION */
@@ -297,10 +305,10 @@ body {
   line-height: 1.71px;
   letter-spacing: 0.03em;
   color: var(--prinary-white-color);
+  margin-bottom: 9px;
 }
 
 .footer-email {
-  margin-top: 9px;
   margin-bottom: 9px;
   display: inline-block;
 }
@@ -335,6 +343,7 @@ body {
   background-color: var(--third-background-color);
   cursor: pointer;
   border-radius: 4px;
+  border: none;
   padding: 6px 22px;
 }
 .menu-portfolio:not(:last-child) {
@@ -358,11 +367,11 @@ body {
   width: calc((100%-60px) / 3);
   margin-right: 30px;
   margin-bottom: 30px;
+  border-bottom: 1px solid var(--border-portf-color);
 }
 
 .portfolio-example-item:nth-last-child(-n + 3) {
-  margin-bottom: 0;
-  padding-bottom: 94px;
+  margin-bottom: 94px;
 }
 
 .portfolio-example-item:nth-child(3n) {
@@ -375,12 +384,12 @@ body {
   line-height: 2;
   letter-spacing: 0.06em;
   color: var(--title-text-color);
-  margin-top: 20px;
+  padding-top: 20px;
 }
 
 .portfolio-category-name {
   font-size: 16px;
   line-height: 1.88;
   letter-spacing: 0.03em;
-  margin-bottom: 20px;
+  padding-bottom: 20px;
 }
