--- a/css/styles.css
+++ b/css/styles.css
@@ -56,7 +56,7 @@ body {
 
 /* HEADER */
 .header {
-  border: 1px solid var(--border-color);
+  border-bottom: 1px solid var(--border-color);
 }
 
 .header-container {
