--- a/css/styles.css
+++ b/css/styles.css
@@ -139,7 +139,8 @@ body {
 
 .header-contacts :hover,
 .header-contacts :focus {
-  color: var(--accent-text-color);
+  color: var(--btn-active-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
 /* HERO */
@@ -180,7 +181,6 @@ body {
 
 .hero-btn :hover,
 .hero-btn :focus {
-  color: var(--prinary-white-color);
   background-color: var(--btn-active-color);
 }
 
@@ -219,6 +219,10 @@ body {
 }
 
 /* EXAMPLES-SECTION */
+
+.work-examples-section {
+  padding-bottom: 94px;
+}
 .second-title {
   font-weight: 700;
   font-size: 36px;
@@ -246,7 +250,6 @@ body {
 .team-member {
   background-color: var(--prinary-white-color);
   width: 270px;
-  height: 368px;
   margin-right: 30px;
 }
 
@@ -267,8 +270,12 @@ body {
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--title-text-color);
-  margin-top: 30px;
   margin-bottom: 10px;
+}
+
+.team-info {
+  padding-top: 30px;
+  padding-bottom: 30px;
 }
 
 .team-member-jobtitle {
@@ -302,7 +309,7 @@ body {
 .adress {
   font-style: normal;
   font-size: 14px;
-  line-height: 1.71px;
+  line-height: 1.71;
   letter-spacing: 0.03em;
   color: var(--prinary-white-color);
   margin-bottom: 9px;
@@ -322,12 +329,15 @@ body {
 }
 
 /* PORTFOLIO */
+.portfolio-section {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
 
 /* MENU-SECTION */
 
 .menu-section {
-  padding-top: 94px;
-  padding-bottom: 34px;
+  margin-bottom: 34px;
   display: flex;
   justify-content: center;
 }
@@ -364,18 +374,25 @@ body {
 
 .portfolio-example-item {
   background-color: var(--prinary-white-color);
-  width: calc((100%-60px) / 3);
+  width: calc((100% - 60px) / 3);
   margin-right: 30px;
   margin-bottom: 30px;
-  border-bottom: 1px solid var(--border-portf-color);
 }
 
 .portfolio-example-item:nth-last-child(-n + 3) {
-  margin-bottom: 94px;
+  margin-bottom: 0;
 }
 
 .portfolio-example-item:nth-child(3n) {
   margin-right: 0;
+}
+
+.portfolio-info {
+  padding-top: 20px;
+  padding-bottom: 20px;
+  border-bottom: 1px solid var(--border-portf-color);
+  border-right: 1px solid var(--border-portf-color);
+  border-left: 1px solid var(--border-portf-color);
 }
 
 .portfolio-examples-title {
@@ -384,12 +401,10 @@ body {
   line-height: 2;
   letter-spacing: 0.06em;
   color: var(--title-text-color);
-  padding-top: 20px;
 }
 
 .portfolio-category-name {
   font-size: 16px;
   line-height: 1.88;
   letter-spacing: 0.03em;
-  padding-bottom: 20px;
 }
